@@ -162,7 +162,7 @@ sub _releases {
       for my $rel (@{$vn{$v->{vid}}}) {
         Tr class => 'rel';
          td class => 'tc1'; lit $self->{l10n}->datestr($rel->{released}); end;
-         td class => 'tc2', !defined($rel->{minage}) ? '' : minage $rel->{minage};
+         td class => 'tc2', $rel->{minage} < 0 ? '' : minage $rel->{minage};
          td class => 'tc3';
           for (sort @{$rel->{platforms}}) {
             next if $_ eq 'oth';
